--- a/home.html
+++ b/home.html
@@ -221,7 +221,7 @@
         }
         .brand-title h2{
            font-size: 60px;
-           text-shadow: 10px 1px 10px grey;
+           text-shadow: 10px 1px 10px #888;
         }
          .light-bulb{
           width: 1200px;
@@ -284,7 +284,7 @@
         }
         .contact-joinus-title h2{
            font-size: 60px;
-           text-shadow: 10px 1px 10px grey;
+           text-shadow: 10px 1px 10px #888;
         }
         .contact-us{
             display: flex;
