修改開始鈕

--- a/fountain.html
+++ b/fountain.html
@@ -106,6 +106,7 @@
             border-radius: 10px;
             border: none;
             background-color: transparent;
+            cursor: pointer;
         }
         .start::before{
             content: "開始遊戲";
