更改地址訊息

--- a/store.html
+++ b/store.html
@@ -186,13 +186,13 @@
                                 <img src="album/pin.png" alt="地址">
                             </div>
                             <div class="contact-info">
-                                <p>03-1234-5678</p>
-                                <p>11:00~9:00</p>
-                                <p>週一公休</p>
-                                <p>桃園市蘆竹區南崁路一段112號1樓</p>
+                                <p>07-8765-4321</p>
+                                <p>10:30~9:30</p>
+                                <p>週四公休</p>
+                                <p>高雄市前鎮區中華五路789號1樓</p>
                             </div>
                         </div>
-                        <div class="map"><iframe width="500" height="250" id="gmap_canvas" src="https://maps.google.com/maps?q=%E6%A1%83%E5%9C%92%E5%B8%82%E8%98%86%E7%AB%B9%E5%8D%80%E5%8D%97%E5%B4%81%E8%B7%AF%E4%B8%80%E6%AE%B5112%E8%99%9F1%E6%A8%93&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe></div>
+                        <div class="map"><iframe width="500" height="250" id="gmap_canvas" src="https://maps.google.com/maps?q=%E9%AB%98%E9%9B%84%E5%B8%82%E5%89%8D%E9%8E%AE%E5%8D%80%E4%B8%AD%E8%8F%AF%E4%BA%94%E8%B7%AF789%E8%99%9F1%E6%A8%93&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe></div>
                     </div>
                 </div>
             </div>
