--- a/appointment.html
+++ b/appointment.html
@@ -182,7 +182,7 @@
                <ul class="main-nav-bar-links">
                    <li><a href="catalogue.html">水水的飾品</a></li>
                    <li><a href="cutomize.html">客製化</a></li>
-                   <li><a href="appointment.html">預約觀賞</a></li>
+                   <li class="current-page"><a href="appointment.html">預約觀賞</a></li>
                    <li><a href="fountain.html">折扣許願池</a></li>
                    <li><a href="store.html">門市資訊</a></li>
                </ul>
@@ -199,6 +199,22 @@
            </div>
         </div>
     </header>
+       <!-- 機器人/購物車 -->
+    <section>
+        <div class="side-service">
+            <div class="speaking-box">
+                <p>
+                    歡迎來到 <span>Felix Jewelry</span>,<br>
+                    可以如何幫助您呢?
+                 </p>
+                 <div class="white-triangle"></div>
+                 <div class="close">X</div>
+            </div>
+             <button><img src="album/bot.png" alt="service"></button>
+             <a href="fountain.html"><img src="album/gold-pot.png" alt="service"></a>
+             <a href="#"><img src="album/shopping-cart.png" alt="shopping-cart"></a>
+        </div>
+    </section>
     <!-- kv -->
     <section class="main-pic">
         <div class="upper-pic">
