--- a/product-description.html
+++ b/product-description.html
@@ -294,8 +294,8 @@
            </div>
         </div>
     </header>
-    <!-- 機器人/購物車 -->
-    <section>
+     <!-- 機器人/購物車 -->
+     <section>
         <div class="side-service">
             <div class="speaking-box">
                 <p>
@@ -306,6 +306,7 @@
                  <div class="close">X</div>
             </div>
              <button><img src="album/bot.png" alt="service"></button>
+             <a href="fountain.html"><img src="album/gold-pot.png" alt="service"></a>
              <a href="#"><img src="album/shopping-cart.png" alt="shopping-cart"></a>
         </div>
     </section>
