--- a/store.html
+++ b/store.html
@@ -110,7 +110,7 @@
                    <li><a href="cutomize.html">客製化</a></li>
                    <li><a href="appointment.html">預約觀賞</a></li>
                    <li><a href="fountain.html">折扣許願池</a></li>
-                   <li><a href="store.html">門市資訊</a></li>
+                   <li class="current-page"><a href="store.html">門市資訊</a></li>
                </ul>
            </nav>
            <div class="search-nav-bar">
@@ -133,10 +133,12 @@
                     歡迎來到 <span>Felix Jewelry</span>,<br>
                     可以如何幫助您呢?
                  </p>
-                 <div class="triangle"></div>
+                 <div class="white-triangle"></div>
                  <div class="close">X</div>
             </div>
              <button><img src="album/bot.png" alt="service"></button>
+             <a href="fountain.html"><img src="album/gold-pot.png" alt="service"></a>
+             <a href="#"><img src="album/shopping-cart.png" alt="shopping-cart"></a>
         </div>
     </section>
     <!-- 門市資訊 -->
