--- a/catalogue.html
+++ b/catalogue.html
@@ -24,7 +24,7 @@
             font-size: 60px;
             text-shadow: 10px 1px 10px grey;
             text-align: center;
-            margin:200px 0px 80px 0px;
+            margin:150px 0px 80px 0px;
             
         }
         .information{
@@ -35,12 +35,16 @@
         .information P{
             margin-left: 20px;
             font-size: 18px;
+            color: #888;
         }
         .categorize{
             margin-right: 20px; 
+            padding:5px;
             width: 150px;
             font-size: 18px;
-            border: 1px solid #aaa;
+            border: none;
+            background-color: #ccc;
+            color: #fff;
         }
         /* 新品一 */
         .product-list{
@@ -52,9 +56,17 @@
         .product{
             display: flex;
             flex-direction: column;
-            width: 260px;
-            margin: 20px;
+            width: 258px;
+            margin: 10px;
+            padding:10px;
             margin-bottom: 100px;
+            transition: 2s;
+            position: relative;
+        }
+        .like{
+            position: absolute;
+            top:10px;
+            right:10px;
         }
         .model{
             width:100%;
@@ -72,20 +84,14 @@
             color: white;
             position: absolute;
             top: 20px;
-            left: -11px;
+            left: -1px;
         }
         .triangle{
             border-bottom: 10px solid transparent;
             border-right: 10px solid #ff3399;
             position: absolute;
             top:50px;
-            left:-11px;
-        }
-        .new-move{
-            left:-5px;  
-        }
-        .move-triangle{
-            left:-5px;
+            left:-1px;
         }
         .pic{
             flex-grow: 1;
@@ -100,7 +106,9 @@
             opacity: .7;
             color:#ff3399;
         }
-      
+        .product:hover{
+            box-shadow: 5px 5px 10px rgba(0, 0, 0, .3);
+        }
         .product-txt{
             width: 260px;
             padding:10px 20px;
@@ -116,7 +124,6 @@
         }
         .product-txt{
             width: 280px;
-            /* margin-left: -20px; */
             display: flex;
             justify-content: space-between;
             align-items: flex-end;
@@ -133,7 +140,7 @@
             cursor: pointer;
         }
         .price .sale{
-            margin:0px;
+            margin:10px 0px;
         }
         .nosale{
             font-size: 23px;
@@ -173,7 +180,7 @@
                 <h1><a href="home.html"><img src="album/logopng.png" alt="Felix Jewelry"></a></h1>
            <nav>
                <ul class="main-nav-bar-links">
-                   <li><a href="catalogue.html">水水的飾品</a></li>
+                   <li class="current-page"><a href="catalogue.html">水水的飾品</a></li>
                    <li><a href="cutomize.html">客製化</a></li>
                    <li><a href="appointment.html">預約觀賞</a></li>
                    <li><a href="fountain.html">折扣許願池</a></li>
@@ -192,7 +199,7 @@
            </div>
         </div>
     </header>
-    <!-- 機器人/購物車 -->
+       <!-- 機器人/購物車 -->
     <section>
         <div class="side-service">
             <div class="speaking-box">
@@ -200,10 +207,11 @@
                     歡迎來到 <span>Felix Jewelry</span>,<br>
                     可以如何幫助您呢?
                  </p>
-                 <div class="triangle"></div>
+                 <div class="white-triangle"></div>
                  <div class="close">X</div>
             </div>
              <button><img src="album/bot.png" alt="service"></button>
+             <a href="fountain.html"><img src="album/gold-pot.png" alt="service"></a>
              <a href="#"><img src="album/shopping-cart.png" alt="shopping-cart"></a>
         </div>
     </section>
@@ -222,8 +230,8 @@
                         </select>
                 </form>
             </div>
-            <div class="product-list">
-                <div class="product">
+            <ul class="product-list">
+                <li class="product">
                     <div class="model">
                         <a href="product-description.html">
                         <div class="pic">
@@ -247,9 +255,9 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </li>
                  <!-- 新品二 -->
-                <div class="product">
+                <li class="product">
                     <div class="model">
                         <a href="#">
                             <div class="pic">
@@ -257,8 +265,8 @@
                             </div>
                             <div class=pop-up>花語</div>
                         </a>
-                        <div class="new new-move">New</div>
-                        <div class="triangle move-triangle"></div>
+                        <div class="new">New</div>
+                        <div class="triangle"></div>
                     </div>
                     <div class="product-txt">
                         <div class="price">
@@ -274,9 +282,9 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </li>
                 <!-- 新品三-->
-                <div class="product">
+                <li class="product">
                     <div class="model">
                         <a href="#">
                             <div class="pic">
@@ -301,8 +309,8 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="product">
+                </li>
+                <li class="product">
                     <div class="model">
                         <a href="product-description.html">
                             <div class="pic">
@@ -324,8 +332,8 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="product">
+                </li>
+                <li class="product">
                     <div class="model">
                         <a href="product-description.html">
                             <div class="pic">
@@ -347,8 +355,8 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="product">
+                </li>
+                <li class="product">
                     <div class="model">
                         <a href="product-description.html">
                             <div class="pic">
@@ -370,8 +378,8 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="product">
+                </li>
+                <li class="product">
                     <div class="model">
                         <a href="product-description.html">
                             <div class="pic">
@@ -393,8 +401,8 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="product">
+                </li>
+                <li class="product">
                     <div class="model">
                         <a href="product-description.html">
                             <div class="pic">
@@ -416,8 +424,8 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="product">
+                </li>
+                <li class="product">
                     <div class="model">
                         <a href="product-description.html">
                             <div class="pic">
@@ -439,8 +447,8 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="product">
+                </li>
+                <li class="product">
                     <div class="model">
                         <a href="product-description.html">
                             <div class="pic">
@@ -462,8 +470,8 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="product">
+                </li>
+                <li class="product">
                     <div class="model">
                         <a href="product-description.html">
                             <div class="pic">
@@ -485,8 +493,8 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="product">
+                </li>
+                <li class="product">
                     <div class="model">
                         <a href="product-description.html">
                             <div class="pic">
@@ -508,8 +516,8 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="product">
+                </li>
+                <li class="product">
                     <div class="model">
                         <a href="product-description.html">
                             <div class="pic">
@@ -531,8 +539,8 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="product">
+                </li>
+                <li class="product">
                     <div class="model">
                         <a href="product-description.html">
                             <div class="pic">
@@ -554,8 +562,8 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="product">
+                </li>
+                <li class="product">
                     <div class="model">
                         <a href="product-description.html">
                             <div class="pic">
@@ -577,8 +585,8 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="product">
+                </li>
+                <li class="product">
                     <div class="model">
                         <a href="product-description.html">
                             <div class="pic">
@@ -600,8 +608,8 @@
                             </div>
                         </div>
                     </div>
-                </div>
-            </div>
+                </li>
+            </ul>
         </div> 
         <div class="pages">
             <div><a href="#">1</a></div>
