--- a/fountain.html
+++ b/fountain.html
@@ -30,16 +30,23 @@
             text-underline-offset: 5px;
         }
         /* 金幣桶 */
-        .speaking-box .close{
+        .one{
+            width: 10px;
+            height: 15px;
+            text-align: center;
+            position: absolute;
             background-color: red;
+            color: #fff;
+            border-radius: 50%;
             padding:5px 8px;
-            right:10px;
+            bottom:80px;
         }
         /* 許願池 */
         .forest{
             background-image: url(album/forest.png);
             background-repeat: no-repeat;
             background-size: contain;
+            background-position: center;
             position: relative;
         }
         .fountain{
@@ -180,7 +187,7 @@
                <li><a href="catalogue.html">水水的飾品</a></li>
                <li><a href="cutomize.html">客製化</a></li>
                <li><a href="appointment.html">預約觀賞</a></li>
-               <li><a href="fountain.html">折扣許願池</a></li>
+               <li class="current-page"><a href="fountain.html">折扣許願池</a></li>
                <li><a href="store.html">門市資訊</a></li>
            </ul>
        </nav>
@@ -196,13 +203,21 @@
        </div>
     </div>
 </header>
-<!-- 金幣桶 -->
-<section>
+  <!-- 機器人/購物車 -->
+  <section>
     <div class="side-service">
         <div class="speaking-box">
-             <div class="close">1</div>
+            <p>
+                歡迎來到 <span>Felix Jewelry</span>,<br>
+                可以如何幫助您呢?
+             </p>
+             <div class="white-triangle"></div>
+             <div class="close">X</div>
         </div>
-         <button><img src="album/gold-pot.png" alt="service"></button>
+         <button><img src="album/bot.png" alt="service"></button>
+         <div class="one">1</div>
+         <a href="fountain.html"><img src="album/gold-pot.png" alt="service"></a>
+         <a href="#"><img src="album/shopping-cart.png" alt="shopping-cart"></a>
     </div>
 </section>
 <!-- 許願池   -->
