--- a/home.html
+++ b/home.html
@@ -57,6 +57,7 @@
         font-size: 50px;
         color: #b8895b;
         font-family: 'Great Vibes', cursive;
+        z-index: 2;
     }
     .welcome span{
      padding: 6px 15px;
@@ -69,9 +70,25 @@
             border-radius: 0px 10px 0px 0px;
     }
     .welcome .second-line{
-     background: linear-gradient(124deg, rgba(255, 255, 255, 0)10%, rgba(255, 255, 255, 0.7)25%);
+        background: linear-gradient(124deg, rgba(255, 255, 255, 0)10%, rgba(255, 255, 255, 0.7)25%);
         border-radius: 0px 10px 10px 10px;
     }
+    .owl-carousel .owl-nav button.owl-next,
+    .owl-carousel .owl-nav button.owl-prev{
+        position: absolute;
+        width: 60px;
+        height: 60px;
+        display: block;
+        background-color: rgb(221,169,117,.8);
+        color: #fff;
+        border-radius: 50%;
+        font-size: 30px;
+        z-index: 2;
+    } 
+    .owl-carousel .owl-nav button.owl-next{
+        right: 0;
+    }
+    
     /* 新品介紹 */
     .new-items-background{
         background-image: url(album/rm272-adj-06-e2.png);
@@ -928,17 +945,6 @@ $(document).ready(function(){
     autoplayTimeout:4000,
     autoplayHoverPause:true,
     animateOut: 'fadeOut',
-    responsive:{
-        0:{
-            items:1
-        },
-        600:{
-            items:1
-        },
-        1000:{
-            items:1
-        }
-    }
 })
 })
 </script>
