--- a/appointment.html
+++ b/appointment.html
@@ -7,40 +7,19 @@
     <title>預約觀賞</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="header css.css">
+    <script src="//s3-ap-northeast-1.amazonaws.com/justfont-user-script/jf-63454.js"></script>
     <style>
-        .main-pic{
-            width:1200px;
-            padding-top: 300px;
-            margin:auto;
-            display: flex;
-            justify-content: center;
-        }
-        .upper-pic img,.bottom-pic img{
-            width:100%;
-            vertical-align: top;
-        }
-        .upper-pic{
-            width:800px;
-            height: 533px;
-            margin-right: -600px;
-            margin-top: -100px;
-            z-index: 1;
-            box-shadow: 10px 10px 15px black;
-        }
-        .bottom-pic{
-            width:800px;
-            opacity: 0.5;
+        /* KV */
+        .upper-pic img{
+         width:100%;
         }
         /* 表單 */
         .appointment-background{
-          background-color: rgba(0,0,0,.05);
+          background-color: rgb(247,244,237);
           padding-bottom: 50px;
         }
         .appointment{
-            width: 1200px;
-            margin: auto;
-            margin-top: 100px;
-            
+            margin: auto;  
         }
         .form-title{
             border-bottom: 1px solid black;
@@ -48,8 +27,7 @@
         }
         .form-title h2{
             text-align: center;
-            font-size: 50px;
-            text-shadow: 5px 5px 10px black;
+            color: #cc9966;
         }
         .form-title .must-fill{
             text-align: end;
@@ -59,42 +37,28 @@
             content: "*";
             color: red;
         }
-         form{
-            font-size: 30px;
-         }
         .select-setting{
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
             padding-top: 50px;
             font-weight: bold;
-            font-size: 25px;
         }
         .spacing{
             border: 1px solid #ccc;
             border-radius: 5px;
         }
         .location {
-            display: flex;
-            justify-content: space-evenly;
-            align-items: center;
             padding-top: 50px;
             font-weight: bold;
-            font-size: 25px;
-            margin-left: -35px;
         }
         .star{
             color: red;
         }
         .branch select{
-            width:300px;
-            font-size: 25px;
-            margin-left: auto;
+            width:43%;
         }
         .product-input{
-            width:280px;
+            width:40%;
             font-size: 20px;
-            padding:10px
+            padding:10px;
         }
         .suggest{
             margin-bottom: 70px;
@@ -103,15 +67,10 @@
         .suggest::after{
             content: "請輸入500字符以內";
             font-size: 18px;
-            width: 200px;
-            position: absolute;
-            bottom:-20px;
-            right:220px;
             color: #888;
         }
         #customer-suggest{
             resize: none;
-            width: 400px;
             height: 300px;
             font-size: 20px;
             border: 1px solid #ccc;
@@ -120,21 +79,18 @@
         }
         .selection-area{
             margin: auto;
-            width: 700px;
         }
         .agreement{
             border-top: 1px solid black;
             font-size: 20px;
         }
         .agreement p{
-            width:800px;
             margin: auto;
             line-height: 1.5em;
             text-align: center;
             margin-top: 50px;
         }
         .check-area{
-            width: 800px;
             margin: auto;
             text-align: center;
         }
@@ -145,16 +101,14 @@
             color: red;
         }
         .send{
-            width: 800px;
             margin: auto;
             text-align: center;
             margin-top: 50px;
             font-size: 0px;
         }
         .submit{
-            width: 100px;
+            width: 15%;
             height: 50px;
-            font-size: 30px;
             margin-right: 30px;
             background-color: #ff3399; 
             border: none;
@@ -162,14 +116,242 @@
             cursor: pointer;
         }
         .cancel{
-            width: 100px;
+            width: 15%;
             height: 50px; 
-            font-size: 30px;
             background-color: transparent; 
             border: none;
             cursor: pointer;
             text-decoration: 1px underline black;
             text-underline-offset: 5px;
+        }
+        @media screen and (max-width:768px){
+            .bottom-pic{
+                display: none;
+            }
+            /* 表單 */
+            form{
+             font-size: 20px;
+            }
+            .form-title h2{
+              font-size: 30px;
+            }
+            .selection-area{
+              width: 90%;
+            }
+            .select-setting{
+              font-size: 20px;
+              display: block;
+              text-align: center;
+            }
+            .branch select{
+              font-size: 20px;
+            }
+            .check-area{
+             width: 100%;
+            }
+            .location{
+                text-align: center;
+            }
+            .label{
+             width: 50%;
+             display: block;
+             margin: auto;
+             margin-bottom: 10px;
+            }
+            .select-setting label{
+             width: 50%;
+             display: block;
+             margin: auto;
+             margin-bottom: 10px;
+            }
+            .product-input{
+              font-size: 15px;
+            }
+            #online{
+             margin-top: 20px;
+            }
+            .agreement p{
+             width:90%;
+            }
+            .send{
+             width: 100%;
+            }
+            .suggest>label{
+                width: 100%;
+            }
+            .suggest::after{
+              width: 50%;
+              position: absolute;
+              bottom:-20px;
+              left:0;
+              right:0;
+              margin: auto; 
+            }
+            #customer-suggest{
+              width: 90%;
+            }
+            .submit{
+             font-size: 25px;
+            }
+            .cancel{
+             font-size: 25px;
+            }
+        }
+        @media screen and (min-width:769px) and (max-width:1199px){
+            .bottom-pic{
+                display: none;
+            }
+            /* 表單 */
+            form{
+             font-size: 20px;
+            }
+            .form-title h2{
+              font-size: 30px;
+            }
+            .selection-area{
+              width: 66%;
+            }
+            .select-setting{
+              font-size: 20px;
+              display: block;
+              text-align: center;
+            }
+            .branch select{
+              font-size: 20px;
+            }
+            .check-area{
+             width: 100%;
+            }
+            .location{
+                text-align: center;
+            }
+            .label{
+             width: 50%;
+             display: block;
+             margin: auto;
+             margin-bottom: 10px;
+            }
+            .select-setting label{
+             width: 50%;
+             display: block;
+             margin: auto;
+             margin-bottom: 10px;
+            }
+            #online{
+             margin-top: 20px;
+            }
+            .agreement p{
+             width:90%;
+            }
+            .send{
+             width: 100%;
+            }
+            .suggest>label{
+                width: 80%;
+            }
+            .suggest::after{
+              width: 50%;
+              position: absolute;
+              bottom:-20px;
+              left:0;
+              right:0;
+              margin: auto; 
+            }
+            #customer-suggest{
+              width: 90%;
+            }
+            .submit{
+             font-size: 25px;
+            }
+            .cancel{
+             font-size: 25px;
+            }
+        }
+        @media screen and (min-width:1200px){
+            .main-pic{
+             padding-top: 300px;
+             margin:auto;
+             display: flex;
+             justify-content: center;
+            }
+            .main-pic{
+              width:1200px;
+            }
+            .upper-pic{
+              width:800px;
+              height: 533px;
+              margin-right: -600px;
+              margin-top: -100px;
+              z-index: 1;
+              box-shadow: 10px 10px 15px rgba(0,0,0,.5);
+            }
+            .bottom-pic{
+              width:800px;
+            }
+            .bottom-pic img{
+              width:100%;
+              vertical-align: top;
+            }
+            .bottom-pic{
+             opacity: 0.5;
+            }
+            .appointment{
+             width: 1200px;
+             margin-top: 100px;
+            }
+            /* 表單 */
+            .form-title h2{
+              font-size: 50px;
+            }
+            .location {
+              font-size: 25px;
+              display: flex;
+              align-items: center;
+            }
+            .branch select{
+              font-size: 25px;
+            }
+            .select-setting{
+              display: flex;
+              align-items: center;
+              font-size: 25px;
+            }
+            .check-area{
+             width: 800px;
+            }
+            .label{
+             width: 36%;
+            }
+            #online{
+             margin-left: 50px;
+            }
+            .select-setting label{
+             width: 36%;
+            }
+            .agreement p{
+             width:800px;
+            }
+            .send{
+             width: 800px;
+            }
+            .selection-area{
+              width: 700px;
+            }
+            .suggest::after{
+              width: 28%;
+              position: absolute;
+              bottom:-20px;
+              right:250px;
+            }
+            #customer-suggest{
+              width: 400px;
+            }
+            .submit{
+             font-size: 30px;
+            }
+            .cancel{
+             font-size: 30px;
+            }
         }
     </style>
     <script type="text/javascript">
@@ -196,7 +378,7 @@
            <ul class="main-nav-bar-links">
                <li><a href="catalogue.html">水水的飾品</a></li>
                <li><a href="cutomize.html">客製化</a></li>
-               <li><a href="appointment.html">預約觀賞</a></li>
+               <li class="current-page"><a  href="appointment.html">預約觀賞</a></li>
                <li><a href="fountain.html">折扣許願池</a></li>
                <li><a href="store.html">門市資訊</a></li>
            </ul>
@@ -216,8 +398,8 @@
         </button> 
    </nav>   
 </header>
-       <!-- 機器人/購物車 -->
-    <section>
+<!-- 機器人/購物車 -->
+<section>
         <div class="side-service">
             <div class="speaking-box">
                 <p>
@@ -231,34 +413,34 @@
              <a href="fountain.html"><img src="album/gold-pot.png" alt="service"></a>
              <a href="#"><img src="album/shopping-cart.png" alt="shopping-cart"></a>
         </div>
-    </section>
-    <!-- kv -->
-    <section class="main-pic">
-        <div class="upper-pic">
-            <img src="album/GALA.jpg" alt="門市預約">
+</section>
+<!-- kv -->
+<section class="main-pic">
+    <div class="upper-pic">
+        <img src="album/GALA.jpg" alt="門市預約">
+    </div>
+    <div class="bottom-pic">
+        <img src="album/pngtree-wedding-red-rose-white-background-image_766270.jpg" alt="底圖">
+    </div>
+</section>
+<!-- 表單 -->
+<section class="appointment-background">
+    <div class="appointment">
+        <div class="form-title">
+            <h2>預約觀賞</h2>
+            <div class=must-fill>為必填項目</div>
         </div>
-        <div class="bottom-pic">
-            <img src="album/pngtree-wedding-red-rose-white-background-image_766270.jpg" alt="底圖">
-        </div>
-    </section>
-    <!-- 表單 -->
-    <section class="appointment-background">
-        <div class="appointment">
-            <div class="form-title">
-                <h2>預約觀賞</h2>
-                <div class=must-fill>為必填項目</div>
-            </div>
             <form action="">
                     <div class="selection-area">
-                        <p class="location">
-                          <span><span class="star">*</span>實體或線上觀賞</span>
+                        <p class=" location">
+                          <span class="label"><span class="star">*</span>實體或線上觀賞</span>
                           <input type="radio" id="store" name="location" value="store" >
                           <label for="store">實體觀賞</label><br>
                           <input type="radio" id="online" name="location" value="online" >
                           <label for="online">線上觀賞</label><br>
                         </p>
                         <p class="select-setting branch">
-                            <span class="star">*</span>預約門市
+                            <span class="label"><span class="star">*</span>預約門市</span>
                             <select class="spacing" name="branch">
                                 　<option value="Taoyuan">桃園旗艦店</option>
                                 　<option value="kaohsiung">高雄奇幻店</option>
@@ -269,7 +451,7 @@
                             <input class="spacing product-input" type="text" name="product" placeholder="請輸入您想觀賞的飾品">
                         </p>
                         <p class="select-setting branch">
-                            <span class="star">*</span>預約來店人數
+                            <span class="label"><span class="star">*</span>預約來店人數</span>
                             <select class="spacing" name="people">
                                 　<option value="one">1人</option>
                                 　<option value="two">2人</option>
@@ -291,8 +473,9 @@
                             <input class="spacing product-input" type="text" name="email" placeholder="請輸入您的電子信箱">
                         </p>
                         <div class="select-setting suggest">
-                                    若有任何希望或要求，<br>
-                                    歡迎告訴我們</label>
+                                <label>
+                                    若有任何希望或要求，歡迎告訴我們
+                                </label>
                                 <textarea name="suggest" id="customer-suggest" placeholder="歡迎跟我們說您的想法!"></textarea>
                         </div>
                     </div>
@@ -310,32 +493,32 @@
                         <button class="cancel">取消</button>
                     </div>
             </form>
-        </div>
-    </section>
-     <!-- footer -->
-     <footer>
-        <nav>
-            <ul class="footer-links">
-                <li><a href="catalogue.html">水水的飾品</a></li>
-                <li><a href="cutomize.html">客製化</a></li>
-                <li><a href="appointment.html">預約觀賞</a></li>
-                <li><a href="fountain.html">折扣許願池</a></li>
-                <li><a href="store.html">門市資訊</a></li>
-            </ul>
-        </nav> 
-        <div class="social-media">
-           <a href="#"><img src="album/instagram.png" alt="IG"></a>
-           <a href="#"><img src="album/facebook.png" alt="FB"></a>
-           <a href="#"><img src="album/youtube.png" alt="YT"></a>
-           <a href="#"><img src="album/twitter.png" alt="twitter"></a>
-        </div>
-        <div class="footer-logo">
-            <a href="home.html"><img src="album/logopng.png" alt="Felix Jewelry"></a>
-        </div>
+    </div>
+</section>
+<!-- footer -->
+<footer>
+    <nav>
+        <ul class="footer-links">
+            <li><a href="catalogue.html">水水的飾品</a></li>
+            <li><a href="cutomize.html">客製化</a></li>
+            <li><a href="appointment.html">預約觀賞</a></li>
+            <li><a href="fountain.html">折扣許願池</a></li>
+            <li><a href="store.html">門市資訊</a></li>
+        </ul>
+    </nav> 
+    <div class="social-media">
+        <a href="#"><img src="album/instagram.png" alt="IG"></a>
+        <a href="#"><img src="album/facebook.png" alt="FB"></a>
+        <a href="#"><img src="album/youtube.png" alt="YT"></a>
+        <a href="#"><img src="album/twitter.png" alt="twitter"></a>
+    </div>
+    <div class="footer-logo">
+        <a href="home.html"><img src="album/logopng.png" alt="Felix Jewelry"></a>
+    </div>
 
-        <div class="copy-right">
-            &copy;Felix Jewelry. 2021. all rights reserved!
-        </div>
-    </footer>
+    <div class="copy-right">
+        &copy;Felix Jewelry. 2021. all rights reserved!
+    </div>
+</footer>
 </body>
 </html>
