--- a/home.html
+++ b/home.html
@@ -73,21 +73,6 @@
         background: linear-gradient(124deg, rgba(255, 255, 255, 0)10%, rgba(255, 255, 255, 0.7)25%);
         border-radius: 0px 10px 10px 10px;
     }
-    .owl-carousel .owl-nav button.owl-next,
-    .owl-carousel .owl-nav button.owl-prev{
-        position: absolute;
-        width: 60px;
-        height: 60px;
-        display: block;
-        background-color: rgb(221,169,117,.8);
-        color: #fff;
-        border-radius: 50%;
-        font-size: 30px;
-        z-index: 2;
-    } 
-    .owl-carousel .owl-nav button.owl-next{
-        right: 0;
-    }
     
     /* 新品介紹 */
     .new-items-background{
@@ -264,6 +249,10 @@
       .welcome{
          display:none
        }  
+       .owl-carousel .owl-nav button.owl-next,
+        .owl-carousel .owl-nav button.owl-prev{
+            display: none;
+        }
       /* 新品介紹 */
        .new-items{
          width:100%;
@@ -358,6 +347,10 @@
             font-size: 30px;
             top:25%;
             left:10%;
+        }
+        .owl-carousel .owl-nav button.owl-next,
+        .owl-carousel .owl-nav button.owl-prev{
+            display: none;
         }
         /* 新品介紹 */
         .new-item-title h2{
@@ -487,6 +480,22 @@
         }
     }
     @media screen and (min-width:1200px){
+        /* KV */
+        .owl-carousel .owl-nav button.owl-next,
+        .owl-carousel .owl-nav button.owl-prev{
+        position: absolute;
+        width: 60px;
+        height: 60px;
+        display: block;
+        background-color: rgb(221,169,117,.8);
+        color: #fff;
+        border-radius: 50%;
+        font-size: 30px;
+        z-index: 2;
+    } 
+    .owl-carousel .owl-nav button.owl-next{
+        right: 0;
+    }
         /* 新品介紹 */
         .new-product{
          display: flex;
