--- a/fountain.html
+++ b/fountain.html
@@ -9,9 +9,6 @@
     <link rel="stylesheet" href="header css.css">
     <style>
         /* 主選單 */
-        .main-nav-bar{
-            justify-content: flex-start;
-        }
         .member{
             display: flex;
             font-size: 13px;
@@ -174,10 +171,11 @@
               background-repeat: no-repeat;
               background-position: center;
               padding: 20% 0;
-              margin-top: 50px;
+              margin-top: 10%;
             }  
             .introduction h2{
              font-size: 25px;
+             margin-top: 5%;
             } 
             .story{
              width: 300px;
