--- a/home.html
+++ b/home.html
@@ -11,7 +11,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="owl.carousel.min.css">
-    <link rel="stylesheet" href="owl.theme.default.min.css">
     <script src="//s3-ap-northeast-1.amazonaws.com/justfont-user-script/jf-63454.js"></script>
     <style>
     .slider{
@@ -88,7 +87,6 @@
     .new-item-title h2{
        font-size: 50px;
        color: #cc9966;
-       text-shadow: 1px 1px 5px rgba(204, 153, 102, .3);
     }
     .model-img{
        vertical-align: middle;
@@ -235,7 +233,7 @@
     }
     .earn-coin p{
         color: #fff;
-        text-shadow: 1px 1px 5px rgba(0, 0, 0, .3);
+        text-shadow: 1px 1px 5px rgba(0, 0, 0, .1);
     }
     .earn-coin .sign-up{
         font-size: 1.5rem;
@@ -255,7 +253,7 @@
         }
       /* 新品介紹 */
        .new-items{
-         width:100%;
+         width:80%;
        } 
        .new-item-title h2{
          text-align: center;
@@ -268,6 +266,9 @@
          width:100%;
          text-align: center;
          margin-left: auto;
+        }
+        .describe>p{
+            line-height: 1.5em;  
         }
         .model{
          width: 100%; 
@@ -283,9 +284,17 @@
         }
         .second-describe>p{
          text-align: center;
+         line-height: 1.5em;
         }
         .second-price-btn{
          justify-content: center;
+        }
+        .second-price .original{
+            text-align: center;
+        }
+        .second-price .sale{
+            text-align: center;
+            margin-top: 5px;
         }
         .more{
          margin: 50px 0;
@@ -308,6 +317,10 @@
         }
         .carefully-made{
             flex-direction: row-reverse;
+        }
+        .idea img{
+         width: 60%;
+         vertical-align: top;
         }
         /* 聯絡我們 */
         .contact-background{
@@ -839,7 +852,7 @@
                 </div>
             </div>
             <div class="more">
-                <a href="catalogue">更多飾品</a>
+                <a href="catalogue.html">更多飾品</a>
             </div>
     </div>
     <!-- 客製化 -->
